# politician-trade-score

./: .gitignore  README.md  fallingknive.py  fetch_data.py  pyproject.toml
data/: AAPL.csv  META.csv  NVDA.csv
src/politician_trade_score/: __init__.py  cli.py  score.py
src/politician_trade_score.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/poltrade/: data.py
tests/: test_basic.py
