[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "politician-trade-score"
version = "2025.1.0"
description = "Score stocks based on US politician trade disclosures (Capitol Trades)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Insert"}]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "matplotlib>=3.7"
]

[project.scripts]
poltrade = "poltrade.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]