[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "politician-trade-score"
version = "2025.1.2"
description = "Score stocks based on US politician trade disclosures (Capitol Trades)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "matplotlib>=3.7",
    "lxml>=4.9"
]

[project.scripts]
poltrade = "politician_trade_score.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
